--- a/MoreStyle.css
+++ b/MoreStyle.css
@@ -1,8 +1,3 @@
-ul {
-    margin-bottom: 2px;
-    margin-top: 0;
-}
-
 ul li:first-child {
     border-bottom: none;
 }
@@ -12,18 +7,9 @@ ul li:nth-child(2) {
 }
 
 ul li:nth-child(3){
-    background-color: rgb(74, 132, 151);
-    border-radius: 10px;
+    border-bottom: 3px solid rgba(20, 118, 247, 0.76);
 }
 
-ul li:nth-child(3):hover{
-    background-color: rgb(91, 171, 197);
-    border-radius: 10px;
-}
-
-ul li:nth-child(3) a{
-    color:rgb(235, 229, 229)
-}
 
 #searchBox {
     padding: 40px;
@@ -52,8 +38,8 @@ form #btn {
     padding: 20px;
     margin-bottom: 4px;
     background-image: url(icon/icon.png);
-    color:rgb(20, 80, 247);
-    background-color: rgba(210, 229, 245, 0.171);
+    color:rgb(255, 255, 255);
+    background-color: rgb(66, 106, 238);
     border-radius: 33px;
     border: none;
     box-shadow: 1px 1px 1px silver;
@@ -61,11 +47,15 @@ form #btn {
 
 #btn:hover {
     box-shadow: 1px 1px 2px silver;
-    background-color: cadetblue;
+    background-color: rgb(103, 135, 241);
     color: white;
 }
 
 #advSearchHeading {
     grid-column: 1/-1;
+}
+
+.advInput {
+    outline:none;
 }
 
